[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/BarlowCondensed-BlackItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/CountdownMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=17]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="CountdownMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_top = 312.0
margin_right = 1280.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 0.541176 )

[node name="TimerLabel" type="Label" parent="."]
margin_top = 312.0
margin_right = 1280.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 17 )
text = "3"
align = 1
valign = 1

[node name="CountdownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
